setup secret github token

--- a/.github/workflows/update_community_labeling.yml
+++ b/.github/workflows/update_community_labeling.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Generate voting summary
       run: |
         python3 community_labeling/src/update_community_labeling.py
-
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Commit and push updates
       run: |
         git config --global user.name "GitHub Actions"
